Add Simple ViewPager with Indicator - Add Maven Repository - Add Custom Vertical ViewPager

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url "http://dl.bintray.com/populov/maven"
+        }
         google()
         jcenter()
     }
