--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,8 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField 'String', 'ACCESS_TOKEN', "$access_token"
+        buildConfigField 'String', "USER_NAME", "$user_name"
+        buildConfigField 'String', "PASSWORD", "$password"
     }
     buildTypes {
         release {
